# office-agent

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  CLAUDE_AGENT_TOOLS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: architect.md  build-error-resolver.md  code-reviewer.md  database-reviewer.md  planner.md  refactor-cleaner.md  silent-failure-hunter.md  tdd-guide.md
demo/: demo.html
docs/: bugs_part-3.md  features_part-3.md  module-explanation.md  technical-spec.md
experiment/: DAA_EVALUATION_STRATEGY.md  SKILL.md
scripts/: smoke_data_analysis.py
src/da_agent/: __init__.py  cli.py
src/da_agent/agent/: core.py  events.py  permissions.py  prompts.py  security.py  subagents.py  todos.py  tools.py
src/da_agent/ingestion/: __init__.py  profiler.py  prompts.py  registry.py  runner.py
src/da_agent/outputs/: observer.py
src/da_agent/server/: app.py  attachments_registry.py  schemas.py  state.py  web_ui.py
src/da_agent/server/routes/: attachments.py  interactions.py  kb.py  messages.py  outputs.py  sessions.py
src/da_agent/ui/: __init__.py  base.py  console.py  prompts.py
tests/: test_agent.py  test_attachments_routes.py  test_fixture_sales.py  test_kb_versions_routes.py  test_output_targets.py  test_outputs_observer.py  test_outputs_routes.py  test_outputs_sse.py  test_prompts.py  test_server.py  test_subagents.py  test_todos.py
tests/fixtures/: _gen_sales_xlsx.py  sales.xlsx
