[project]
name = "da-agent"
version = "0.1.0"
description = "Excel data-analyst agent (Claude Agent SDK) with a Claude Code-style TUI"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.80",
    "rich>=13.7",
    "prompt_toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
da-agent = "da_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/da_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
